--- a/HW2_YB/hw2_q1.ipynb
+++ b/HW2_YB/hw2_q1.ipynb
@@ -12,6 +12,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f9a02c1e-79a7-4570-a1c7-c63d268a388d",
+   "metadata": {},
+   "source": [
+    "## Atabey's Notes\n",
+    "\n",
+    "Nicely done! I'd rather if you didn't split the questions, but ok. (33pts)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 61,
    "id": "2fa65d46",
