Final project proposal graded.

--- a/Final_Project/Project_Proposal.ipynb
+++ b/Final_Project/Project_Proposal.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "3bfcc7d0-ab6a-4d89-837e-5e464039cb8e",
+   "metadata": {},
+   "source": [
+    "## Atabey's Notes\n",
+    "\n",
+    "Everything is nicely documented. The project is designed well. No comments.\n",
+    "\n",
+    "100/100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8e9bb033",
    "metadata": {},
    "source": [
@@ -220,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
