--- a/hw3_yb.ipynb
+++ b/hw3_yb.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "233209e2-e409-4ef2-82c4-59043adc6d89",
+   "metadata": {},
+   "source": [
+    "## Atabey's Notes\n",
+    "\n",
+    "You had a lot of problems getting the data. Instead of focusing on getting the data, you should have tried to solve questions on a limited set of data you got from the data server. You needed to *separate the concerns*: data acquisition and data processing.\n",
+    "\n",
+    "Q1 only \n",
+    "\n",
+    "25/100"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "33530ae3",
@@ -197,7 +211,9 @@
    "cell_type": "code",
    "execution_count": 204,
    "id": "d41b0adb",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1497,7 +1513,9 @@
    "cell_type": "code",
    "execution_count": 218,
    "id": "0f2c0c82",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -5088,7 +5106,9 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "432663fd",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -5425,7 +5445,9 @@
    "cell_type": "code",
    "execution_count": 40,
    "id": "c492a065",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -19607,7 +19629,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
